--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">魔法书</string>
-    <string name="title">魔法钢琴钢琴</string>
+    <string name="title">魔法钢琴</string>
     <string name="happybirthday">生日快乐\n556517 556521  5553176 443121</string>
     <string name="stars">小星星 \n1155665 4433221 5544332 5544332 1155665 4433221</string>
     <string name="twotigers">两只老虎\n1231 1231 345 345 565431 565431 35\-1 35\-1</string>
